<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.raqib.instadate.MainActivity">

    <item
        android:id="@+id/action_Register"
        android:orderInCategory="101"
        android:title="@string/action_Register"
        app:showAsAction="never"
        android:onClick="RegisterUser"
        />
    <item
        android:id="@+id/action_Customization"
        android:orderInCategory="102"
        android:title="@string/action_Customization"
        app:showAsAction="never"
        android:onClick="UserCustomization"
        />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="103"
        android:title="@string/action_about"
        app:showAsAction="never"
        android:onClick="about"
        />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="104"
        android:title="@string/action_exit"
        app:showAsAction="never"
        android:onClick="closeApp"
        />
</menu>
