<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.raqib.instadate.RegisterUser"
    tools:showIn="@layout/activity_register">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_RegisterName"
        android:textStyle="bold"
        android:textColor="#05e65b"
        android:padding="10dp"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/UserName"
        android:hint="@string/action_RegisterNameHint"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/UserPasswordConfirm"
        android:layout_alignStart="@+id/UserPasswordConfirm" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_RegisterEmail"
        android:textStyle="bold"
        android:textColor="#05e65b"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_below="@+id/textView1"
        />

    <EditText
        android:id="@+id/UserEmail"
        android:hint="@string/action_RegisterEmailHint"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignLeft="@+id/UserPassword"
        android:layout_alignStart="@+id/UserPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_RegisterPassword"
        android:textStyle="bold"
        android:textColor="#05e65b"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:id="@+id/RegisterButton"
        android:text="@string/action_RegisterButton"
        android:layout_width="wrap_content"
        android:textColor="#ffffff"
        android:background="#04691a"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UserPasswordConfirm"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/action_RegisterPasswordHint1"
        android:ems="10"
        android:id="@+id/UserPassword"
        android:layout_below="@+id/UserEmail"
        android:layout_alignLeft="@+id/UserPasswordConfirm"
        android:layout_alignStart="@+id/UserPasswordConfirm" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_RegisterPasswordConfirm"
        android:textStyle="bold"
        android:textColor="#05e65b"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:layout_below="@+id/UserPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/action_RegisterPasswordHint2"
        android:ems="10"
        android:id="@+id/UserPasswordConfirm"
        android:layout_below="@+id/UserPassword"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

</RelativeLayout>
